--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
             </li>
             <li>
               <p>
-                <a href="https://miappdegastos.netlify.app/" target="_blank"
-                  >App de Gastos:</a
+                <a
+                  href="https://eliasg52.github.io/Ejercicios-de-R-Argentina-Programa/Clase10-Simon/"
+                  target="_blank"
+                  >Simon Says:</a
                 >
-                Aplicacion para llevar un registro de gastos realizados.
+                Desarrollo del juego "Simon Says" (en desarrollo)
               </p>
             </li>
             <li>
@@ -111,15 +113,23 @@
             </li>
             <li>
               <p>
-                <a
-                  href="https://eliasg52.github.io/Ejercicios-de-R-Argentina-Programa/Clase10-Simon/"
-                  target="_blank"
-                  >Simon Says:</a
+                <a href="https://miappdegastos.netlify.app/" target="_blank"
+                  >App de Gastos:</a
                 >
-                Desarrollo del juego "Simon Says" (en proceso)
+                Aplicacion para llevar un registro de gastos realizados.
               </p>
             </li>
-            <li></li>
+
+            <li>
+              <p>
+                <a
+                  href="https://eliasg52.github.io/Curriculum-Online/index.html"
+                  target="_blank"
+                  >Curriculum Online:</a
+                >
+                Curriculum creado con HTML/CSS
+              </p>
+            </li>
           </ul>
           <h3>👨🏼‍🎓 Formación:</h3>
           <h4>Formación IT</h4>
