--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
           <h3>💬 Sobre mi:</h3>
           <ul>
             <li>
-              <p>Apasionado por la tecnología,el cine y mis perras 🐶</p>
+              <p>
+                Apasionado por la tecnología (Javascript 💛),el cine y mis
+                perras 🐶
+              </p>
             </li>
             <li>
               <p>
@@ -136,8 +139,8 @@
           <ul>
             <li>
               <p>
-                <span class="bold">2021:</span> En curso: Desarrollo de FrontEnd
-                dictado por
+                <span class="bold">2021:</span> Desarrollo de FrontEnd dictado
+                por
                 <a
                   href="https://www.fundaciontelefonica.com.ar/"
                   target="_blank"
