--- a/index.html
+++ b/index.html
@@ -184,29 +184,38 @@
           </ul>
 
           <h3>💻 Tecnologias:</h3>
-          <code>
-            const aboutMe = { <br />
-            &nbsp languages: ['spanish', 'english'], //comprehension of english
-            <br />
-            &nbsp code: ['Javascript', 'HTML', 'CSS'], <br />
-            &nbsp technologies: { <br />
-            &nbsp &nbsp frontEnd: { <br />&nbsp &nbsp &nbsp js: ['VanillaJS',
-            'POO', 'APIREST', 'UnitTests'], <br />
-            &nbsp &nbsp &nbsp css: ['VanillaCSS', 'Materialize', 'Bootstrap'],
-            }, <br />
-            &nbsp &nbsp backEnd: { <br />
-            &nbsp &nbsp &nbsp Node: ['Express', 'NPM'], }, <br />
-            &nbsp &nbsp dataBases: ['mongoose', 'sql'], <br />
-            &nbsp &nbsp versionControl: ['Git', 'Github'], <br />
-            &nbsp &nbsp IDE: ['VSCode'], <br />
-            &nbsp &nbsp operatingSystem: ['Windows', 'Linux'], <br />
-            &nbsp &nbsp softSkills: ['ProblemSolving', 'TeamWork',
-            'Communication'], <br />
-            }, <br />
-            &nbsp &nbspcurrentOccupation: ['Seller, open for job opportunities
-            in IT'],<br />
-            };
-          </code>
+          <div class="code">
+            <code>
+              <span class="const">const</span> aboutMe = { <br />
+              &nbsp <span class="code-color">languages</span>: ['spanish',
+              'english'], //comprehension of english
+              <br />
+              &nbsp <span class="code-color">code</span>: ['Javascript', 'HTML',
+              'CSS'], <br />
+              &nbsp<span class="code-color">technologies</span>: { <br />
+              &nbsp &nbsp <span class="code-color">frontEnd</span>: {
+              <br />&nbsp &nbsp &nbsp js: ['VanillaJS', 'POO', 'APIREST',
+              'UnitTests'], <br />
+              &nbsp &nbsp &nbsp css: ['VanillaCSS', 'Materialize', 'Bootstrap'],
+              }, <br />
+              &nbsp &nbsp <span class="code-color">backEnd</span>: { <br />
+              &nbsp &nbsp &nbsp Node: ['Express', 'NPM'], }, <br />
+              &nbsp &nbsp <span class="code-color">dataBases</span>:
+              ['mongoose', 'sql'], <br />
+              &nbsp &nbsp <span class="code-color">versionControl</span>:
+              ['Git', 'Github'], <br />
+              &nbsp &nbsp <span class="code-color">IDE</span>: ['VSCode'],
+              <br />
+              &nbsp &nbsp <span class="code-color">operatingSystem</span>:
+              ['Windows', 'Linux'], <br />
+              &nbsp &nbsp <span class="code-color">softSkills</span>:
+              ['ProblemSolving', 'TeamWork', 'Communication'], <br />
+              }, <br />
+              &nbsp &nbsp<span class="code-color">currentOccupation</span>:
+              ['Seller, open for job opportunities in IT'],<br />
+              };
+            </code>
+          </div>
         </div>
       </div>
     </main>
