--- a/index.html
+++ b/index.html
@@ -79,12 +79,17 @@
               </p>
             </li>
           </ul>
-          <h3>
-            🔨 Proyectos:
-
-            <a href="">Github</a>
-          </h3>
+          <h3>🔨 Proyectos:</h3>
+          <h4 class="links">Links Visitables a cada Proyecto 👇🏻</h4>
           <ul>
+            <li>
+              <p>
+                <a href="https://github.com/eliasg52" target="_blank"
+                  >Github:</a
+                >
+                Repositorio de mis proyectos
+              </p>
+            </li>
             <li>
               <p>
                 <a
